# web_modul_13

./: README.md
Part 1 FastAPI/: main.py  pyproject.toml
Part 1 FastAPI/src/repository/: contacts.py  users.py
Part 1 FastAPI/src/routes/: auth.py  avatar.py  contacts.py
Part 1 FastAPI/src/services/: auth.py  email.py
Part 2 Django/: pyproject.toml
Part 2 Django/quotes/: config.ini  from_mdb_to_psql.py
Part 2 Django/quotes/quoteapp/migrations/: 0001_initial.py
Part 2 Django/quotes/quotes/: settings.py
Part 2 Django/quotes/users/: urls.py  views.py
Part 2 Django/quotes/users/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
