[tool.poetry]
name = "web_modul_10"
version = "0.1.0"
description = ""
authors = ["Daniel Zubov <https://github.com/DanielDDZ>"]
readme = "README.md"
packages = [{include = "web_modul_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2 = "^2.9.6"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"